# esp-cpa

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  analyze.py  ctrl.py  key_tools.py  measure.py  plot.py  pyproject.toml  utils.py
config/analysis/: esp32_round0.py  esp32_round1.py  esp32c3_round0.py  esp32c3_round1.py  esp32c6_round0.py  esp32c6_round0_cycle0.py  esp32c6_round0_cycle1.py  esp32c6_round1.py  esp32c6_round1_cycle0.py  esp32c6_round1_cycle1.py  leakage_assessment.py
config/capture/: esp32.py  esp32c3.py  esp32c6.py  esp_idf.py
config/group/: esp32c6_sec_dpa.py
esp_cpa_board/: __init__.py  aes_lut.py  aes_utils.py  esp_cpa_board.py  live_signal_viewer.py  temp_controller.py  utils.py
esp_cpa_board/gateware/: __init__.py  adc.py  esp_cpa_board_platform.py  fake_spi_flash.py  gearbox.py  i2c.py  i2c_control.py  measurement_engine.py  pwm.py  top.py
firmware/: Makefile  board.h  cmd.c  cmd.h  debug_serial.c  debug_serial.h  fpga_config.c  fpga_config.h  fpga_control.c  fpga_control.h  gain_control.c  gain_control.h  gpif.c  gpif.h  main.c  target_serial.c  target_serial.h  temperature_sensor.c  temperature_sensor.h  usb.c  usb.h
firmware/lib/libfx2/: .gitignore
firmware/lib/libfx2/firmware/: Makefile
firmware/lib/libfx2/firmware/boot-dfu/: main.c
src/: aes.rs  correlation.cl  correlation_engine.rs  lib.rs  power_consumption_models.rs
